--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -625,15 +625,15 @@
                name="Processor (-mcpu)"
                valueType="enumerated">
             <enumeratedOptionValue
-                  command="-mcpu=ARCv2EM"
+                  command="-mcpu=-mEM"
                   id="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.arcv2em"
                   isDefault="true"
-                  name="ARCv2EM">
+                  name="ARC EM(-mEM)">
             </enumeratedOptionValue>
             <enumeratedOptionValue
-                  command="-mcpu=ARCv2HS"
+                  command="-mcpu=-mEM"
                   id="org.eclipse.cdt.cross.arc.gnu.base.option.mcpu.arcv2hs"
-                  name="ARCv2HS">
+                  name="ARC HS (-mHS)">
             </enumeratedOptionValue>
          </option>
          <option
